macviews: support Cocoa drag-to-select behavior

This change implements the Cocoa behavior when dragging outside the vertical
bounds of a textfield. In both platforms, the semantics are as follows:

When continuing a drag that started outside the text, if the drag is on the
leading side of the baseline point, select the entire text backwards from the
trailing end; if the drag is on the trailing side of the baseline point, select
the entire text forwards from the leading end. Note that "forwards" and
"backwards" selection don't exist at all outside of Mac.

The difference is in the baseline point: in Views, the baseline point is the
text insertion cursor, and in Cocoa, it is the location where the running drag
was started.

Bug: 731252
Change-Id: I61ac6b7d34f0954933486f33e26d228a143eda2f
Reviewed-on: https://chromium-review.googlesource.com/c/1393020
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620019}
Former-commit-id: 47803c371c3a1205d4ad112b357052b17b5965d0