ui/gfx/render_text_mac.h
@@ -36,7 +36,8 @@ class GFX_EXPORT RenderTextMac : public RenderText {
   const base::string16& GetDisplayText() override;
   Size GetStringSize() override;
   SizeF GetStringSizeF() override;
-  SelectionModel FindCursorPosition(const Point& point) override;
+  SelectionModel FindCursorPosition(const Point& point,
+                                    const Point& drag_origin) override;
   bool IsSelectionSupported() const override;
   std::vector<FontSpan> GetFontSpansForTesting() override;
 
